--- a/index.html
+++ b/index.html
@@ -184,9 +184,38 @@
         </div><br><br>
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-5">
                     <div class="plat">
-                        
+                        <div class="flex-container">
+                            <div class="cell">
+                                C17
+                              </div>
+                              <div class="cell">
+                                  C17
+                                </div>
+                                <div class="cell">
+                                  C17
+                                </div>
+                                <div class="cell">
+                                  C17
+                                </div>
+                                <div class="cell">
+                                  C17
+                                </div>
+                                <div class="cell">
+                                  C17
+                                </div>
+                                <div class="cell">
+                                  C17
+                                </div>
+                                <div class="cell">
+                                  C17
+                                </div>
+                                <div class="cell">
+                                  C17
+                                </div>
+                          </div>
+                      
                     </div>
 
                 </div>
