--- a/index.html
+++ b/index.html
@@ -143,25 +143,25 @@
                 <div class="col-lg-3 col-sm-12">
                     <div class="image-container">
                         <img src="asset/a.png" class="image" />
-                        <h1 class="after">Hello</h1>
+                        <h1 class="after">F-22</h1>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-12">
                     <div class="image-container">
                         <img src="asset/Group 39666.png" class="image" />
-                        <h1 class="after">Hello</h1>
+                        <h1 class="after">F-48</h1>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-12">
                     <div class="image-container">
                         <img src="asset/Group 39665.png" class="image" />
-                        <h1 class="after">Hello</h1>
+                        <h1 class="after">F-34</h1>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-12">
                     <div class="image-container">
                         <img src="asset/Group 39667.png" class="image" />
-                        <h1 class="after">Hello</h1>
+                        <h1 class="after">D-46</h1>
                     </div>
                 </div>
             </div>
